<resources>
    <string name="app_name">group</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="browse_groups">Browse groups</string>
    <string name="join_group">Join group</string>
    <string name="private_group">Private Group</string>
    <string name="create_group">Create group</string>
    <string name="public_group">Public Group</string>
    <string name="group_team">Group Team</string>
    <string name="group_type">Group Type</string>
    <string name="guilds">Guilds</string>
    <string name="group">Group</string>
    <string name="squad">Squad</string>
    <string name="tribe">Tribe</string>
    <string name="groups">Groups</string>
    <string name="tribes">Tribes</string>
    <string name="squads">Squads</string>
    <string name="enter_the_group_code">Enter the group code</string>
    <string name="join_a_group">Join a group</string>
    <string name="join">Join</string>
    <string name="close">Close</string>
    <string name="group_code">Group Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="cancel">Cancel</string>
    <string name="leave_caution">Are you sure want to leave from group?</string>
    <string name="view_members">View members</string>
    <string name="leave_group">Leave group</string>
    <string name="send_message_">Send message…</string>
    <string name="send_message">Send message</string>
    <string name="date_time">10:10 PM, 22–09–2019</string>
    <string name="username">username</string>
    <string name="group_name">anti group-group club</string>
    <string name="time">10:10 PM</string>
    <string name="create_meeting_schedule">Create Meeting Schedule</string>
    <string name="_04_nov_2019">04 Nov 2019</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter time</string>
    <string name="description">Description</string>
    <string name="meeting">Meeting</string>
    <string name="meeting_description">Meeting Description</string>
    <string name="write_meeting_note">Write meeting note…</string>
    <string name="done">DONE</string>
    <string name="write_the_note">Write the note…</string>
    <string name="enter_reply">Reply</string>
    <string name="mute_group">Mute Group</string>
    <string name="unmute_group">Unmute Group</string>
    <string name="meeting_1">Meeting #1</string>
    <string name="next_meetings">Next Meetings</string>
    <string name="no_upcoming_meeting">Yay, No Upcoming Meeting</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="clear_chat">Clear chat</string>
    <string name="personals">Personals</string>
    <string name="remove_chat">Remove chat</string>
    <string name="mute_chat">Mute chat</string>
    <string name="unmute_chat">Unmute chat</string>
    <string name="error_please_select_future_date">Please select future date</string>
    <string name="error_please_select_future_time">Please select future time</string>
</resources>
