<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gdn.android.onestop.chat.fragment.GroupLeaveFragment">


    <data>
        <variable
            name="groupName"
            type="String" />
    </data>

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_h3"
            android:text="@string/leave_group" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{`Are you sure want to leave from group ` + groupName+`?`}"
            android:hint="@string/leave_caution"
            android:textSize="@dimen/size_text_h4"/>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_leave"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</layout>