<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gdn.android.onestop.chat.fragment.GroupCreateFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/toolbar_horizontal_margin"
                android:layout_width="@dimen/size_img_1"
                android:layout_height="@dimen/size_img_1"
                android:background="@drawable/ic_left_row_blue"
                android:layout_marginStart="@dimen/toolbar_horizontal_margin" />

            <TextView
                android:layout_marginStart="@dimen/toolbar_horizontal_margin"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_back"
                android:layout_centerVertical="true"
                android:fontFamily="@font/dancing_script_bold"
                android:textSize="@dimen/size_text_h1"
                android:textColor="@color/colorPrimary"
                android:text="@string/create_group"
                android:layout_toEndOf="@id/iv_back"
                android:layout_marginLeft="@dimen/toolbar_horizontal_margin" />

            <ImageView
                android:id="@+id/iv_create"
                android:layout_gravity="center"
                android:background="@drawable/ic_checked"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/size_img_1"
                android:layout_marginEnd="@dimen/toolbar_horizontal_margin"
                android:layout_height="@dimen/size_img_1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/toolbar_horizontal_margin" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_group_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            app:boxBackgroundColor="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_team">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_text_h4" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_type" />

        <RadioGroup
            android:id="@+id/rg_group_type"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_marginTop="10dp"
                android:id="@+id/ritem_group"
                android:text="@string/group"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/ritem_squad"
                android:text="@string/squad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/ritem_tribe"
                android:text="@string/tribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>


    </LinearLayout>
</layout>