<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_meeting_no"
                android:text="@string/meeting_1"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_meeting_date"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/date_time"
                android:layout_toRightOf="@id/tv_meeting_no"
                android:layout_toEndOf="@id/tv_meeting_no" />

            <TextView
                android:id="@+id/tv_group"
                android:layout_below="@id/tv_meeting_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_h3"
                android:text="@string/group_name"/>

            <ImageView
                android:id="@+id/iv_enter"
                android:background="@drawable/ic_enter"
                android:layout_width="@dimen/size_img_2"
                android:layout_height="@dimen/size_img_2"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />


        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>